--- a/css/components/left-hotel-card.css
+++ b/css/components/left-hotel-card.css
@@ -5,12 +5,12 @@
 	display: flex;
 	flex-direction: row;
 	box-shadow: 1px 1px 5px #dedcdc;
-	margin-bottom: 20px;
 }
 
 .left-hotel-card .thumbnail {
 	width: 150px;
-	height: 100%;
+	height: 8vw;
+	object-fit: cover;
 	vertical-align: middle;
 	border-bottom-left-radius: 15px;
 	border-top-left-radius: 15px;
